# Mandelbrot

./: CMakeLists.txt  README.md  cplane.cpp  cplane.hpp  main.cpp  main.cpp.autosave
